--- a/style.css
+++ b/style.css
@@ -1,41 +1,37 @@
-body{
-    background-color: #f0c547;
-    text-align: center;
-    font-family: monospace;
-}
-
-header{
-    text-align: center;
-    margin: 50px;
-    font-weight: 800;
-    font-style: oblique;
-    font-size: x-large
-    ;
-}
-
-main{
-    margin: 10px;
-    }
-
-footer{
-    margin: 90px;
-    font-family: monospace;
-}
-
-.flexcontainer{
-    display: flex;
-    flex-direction: column;
-    min-height: 1vh;
-    max-width: 50vh;
+.parentdiv-nav {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     
 }
 
-#intro{
-    border-radius: 100px;
-    margin: auto;
-    height: auto;
-    width: auto;
-    border: 10px;
-    border-color: black;
-    background-color: rgba(183, 239, 238, 0.893);
+.fb-nav {
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.circle {
+    border-radius: 51%;
+    height: 50px;
+}
+
+.name-Parent {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+
+.name-sub-parent {
+    justify-content: center;
+    text-align: center;
+    align-content: center;
+    height: 100vh;
+}
+
+.name {
+    font-family: "Sofia", serif;
+}
+
+.name-div {
+    justify-content: center;
+    align-content: center;
+    text-align: center;
 }
