--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@300&display=swap');
- 
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@300&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Merienda:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Merienda:wght@600&display=swap");
 
-*{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@500&display=swap");
+
+* {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     padding: 0;
     margin: 0;
 }
-nav{
+nav {
     margin-left: 2vw;
     /* temporary bg color */
     /* background: aqua; */
@@ -19,28 +19,28 @@ nav{
     position: sticky;
     overflow: hidden;
     top: 0;
-
 }
-nav ul{
+nav ul {
     display: flex;
     list-style: none;
     justify-content: flex-end;
 }
 
-nav ul li{
+nav ul li {
     padding: 1vw;
 }
-a:link { 
-  text-decoration: none; 
-} 
-a:visited { 
-  text-decoration: none; 
-} 
-a:hover { 
-  text-decoration: none; 
-} 
-a:active { 
-  text-decoration: none; 
+a:link {
+    text-decoration: none;
+}
+a:visited {
+    text-decoration: none;
+    color: midnightblue;
+}
+a:hover {
+    text-decoration: none;
+}
+a:active {
+    text-decoration: none;
 }
 
 main {
@@ -55,7 +55,7 @@ main {
     justify-content: space-around;
 }
 
-.info_container{
+.info_container {
     height: 70vh;
     display: flex;
     flex-direction: column;
@@ -63,22 +63,22 @@ main {
     justify-content: center;
 }
 
-.mepic img{
+.mepic img {
     height: 80vh;
 }
 
-
-.dev-info, .about{
+.dev-info,
+.about {
     /* font-family: 'Edu SA Beginner', cursive; */
     font-size: 1.9em;
-    font-family: 'Encode Sans Condensed', sans-serif;
+    font-family: "Encode Sans Condensed", sans-serif;
     margin: 2vh 0;
 }
 
 .name {
     /* font-family: 'Caveat', cursive; */
     font-weight: 800;
-    font-family: 'Merienda', cursive;
+    font-family: "Merienda", cursive;
     font-size: 3em;
 }
 
@@ -89,6 +89,52 @@ main {
     border: 1px transparent;
     border-radius: 15px;
 }
- .btn:hover{
+.btn:hover {
     background-color: #9cdbe3;
- }
+}
+
+
+.form-container{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#contact-form {
+    background: white;
+    display: flex;
+    flex-direction: column;
+    padding: 2.5vw 5vw;
+    width: 90%;
+    max-width: 600px;
+    border-radius: 1em;
+}
+
+#contact-form h3{
+    color: grey;
+    font-weight: 1000;
+    margin-bottom: 2vh;
+}
+
+#contact-form input, #contact-form textarea{
+    border: 0;
+    margin: 10px 0;
+    padding: 20px;
+    outline: none;
+    background: #f5f5f5;
+    font-size: 1em;
+}
+
+#contact-form button {
+    align-self: center;
+    padding: 1em;
+    background: grey;
+    color: rgb(197, 209, 212);
+    border: 1px transparent;
+    border-radius: 3em;
+    width: 50%;
+    font-size: 1.2em;
+    cursor: pointer;
+}
