--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@500&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     padding: 0;
     margin: 0;
 }
@@ -19,8 +23,12 @@ nav {
     position: sticky;
     overflow: hidden;
     top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 nav ul {
+    justify-self: flex-end;
     display: flex;
     list-style: none;
     justify-content: flex-end;
@@ -28,6 +36,8 @@ nav ul {
 
 nav ul li {
     padding: 1vw;
+    font-size: 1.5em;
+    font-weight: 600;
 }
 a:link {
     text-decoration: none;
@@ -71,21 +81,21 @@ main {
 .about {
     /* font-family: 'Edu SA Beginner', cursive; */
     font-size: 1.9em;
-    font-family: "Encode Sans Condensed", sans-serif;
+    font-weight: 400;
     margin: 2vh 0;
 }
 
 .name {
     /* font-family: 'Caveat', cursive; */
     font-weight: 800;
-    font-family: "Merienda", cursive;
-    font-size: 3em;
+    font-family: "Mova";
+    font-size: 4rem;
 }
 
 .btn {
     padding: 0.5vh 1vw;
     height: 30px;
-    width: 120px;
+    width: 7vw;
     border: 1px transparent;
     border-radius: 15px;
 }
@@ -93,8 +103,7 @@ main {
     background-color: #9cdbe3;
 }
 
-
-.form-container{
+.form-container {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -112,13 +121,14 @@ main {
     border-radius: 1em;
 }
 
-#contact-form h3{
+#contact-form h3 {
     color: grey;
     font-weight: 1000;
     margin-bottom: 2vh;
 }
 
-#contact-form input, #contact-form textarea{
+#contact-form input,
+#contact-form textarea {
     border: 0;
     margin: 10px 0;
     padding: 20px;
