--- a/style.css
+++ b/style.css
@@ -15,18 +15,18 @@
     padding: 0;
     margin: 0;
 }
-nav {
+/* nav {
     margin-left: 2vw;
     /* temporary bg color */
     /* background: aqua; */
     /* position: relative; */
-    position: sticky;
+    /* position: sticky;
     overflow: hidden;
     top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+} */ 
 nav ul {
     justify-self: flex-end;
     display: flex;
@@ -36,15 +36,18 @@ nav ul {
 
 nav ul li {
     padding: 1vw;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: 600;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 a:link {
     text-decoration: none;
 }
 a:visited {
     text-decoration: none;
-    color: midnightblue;
+    /* color: midnightblue; */
 }
 a:hover {
     text-decoration: none;
@@ -53,12 +56,7 @@ a:active {
     text-decoration: none;
 }
 
-main {
-    width: 90vw;
-    margin: auto;
-    height: 1800px;
-    background: cadetblue;
-}
+
 
 .container {
     display: flex;
@@ -103,48 +101,8 @@ main {
     background-color: #9cdbe3;
 }
 
-.form-container {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#contact-form {
-    background: white;
-    display: flex;
-    flex-direction: column;
-    padding: 2.5vw 5vw;
-    width: 90%;
-    max-width: 600px;
-    border-radius: 1em;
-}
-
-#contact-form h3 {
-    color: grey;
-    font-weight: 1000;
-    margin-bottom: 2vh;
-}
-
-#contact-form input,
-#contact-form textarea {
-    border: 0;
-    margin: 10px 0;
-    padding: 20px;
-    outline: none;
-    background: #f5f5f5;
-    font-size: 1em;
-}
-
-#contact-form button {
-    align-self: center;
-    padding: 1em;
-    background: grey;
-    color: rgb(197, 209, 212);
-    border: 1px transparent;
-    border-radius: 3em;
-    width: 50%;
-    font-size: 1.2em;
-    cursor: pointer;
+@media only screen and (max-width=600px) {
+    nav{
+        background: blue;
+    }
 }
